# mlops-for-mle

./: README.md  claude.md  main.py  pyproject.toml
archive/part2/: db_pipeline.joblib
archive/part3/: data.csv
part3/: data.csv
src/part1/: Dockerfile  data_generator.py  data_insertion.py  data_insertion_loop.py  table_creator.py
src/part2/: classifier.joblib  data.csv  db_pipeline.joblib  db_train.py  model_pipeline.joblib  scaler.joblib
src/part3/: Dockerfile  data.csv  docker-compose.yaml  load_model_from_registry.py  save_model_to_registry.py
