[project]
name = "mlops-for-mle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto>=2.49.0",
    "fastapi>=0.121.1",
    "mlflow==3.6.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
]
